Fix excess margin on top of toolbar on iPhone X

--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,7 @@ body {
     line-height: 1.3;
 }
 ion-app {
-    margin-top: env(safe-area-inset-top);
+    margin-top: constant(safe-area-inset-top);
     //margin-bottom: env(safe-area-inset-bottom);
 }
 
